--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>halaman ini halaman about</h1>
+    <h2>halaman ini bagus</h2>
     <p>selaamt datang</p>
 </body>
 </html>
